# ChangeLog for x11-misc/e16keyedit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/e16keyedit/ChangeLog,v 1.13 2009/06/20 16:22:54 vapier Exp $

*e16keyedit-0.6 (20 Jun 2009)

  20 Jun 2009; Mike Frysinger <vapier@gentoo.org> +e16keyedit-0.6.ebuild:
  Version bump.

*e16keyedit-0.5 (19 Dec 2006)

  19 Dec 2006; Mike Frysinger <vapier@gentoo.org> +e16keyedit-0.5.ebuild:
  Version bump.

*e16keyedit-0.4 (08 Apr 2006)

  08 Apr 2006; Mike Frysinger <vapier@gentoo.org> +e16keyedit-0.4.ebuild:
  Version bump #128815 by José Romildo Malaquias.

*e16keyedit-0.3 (31 Mar 2006)

  31 Mar 2006; Mike Frysinger <vapier@gentoo.org> +e16keyedit-0.3.ebuild:
  Version bump.

  04 Jul 2004; Tom Martin <slarti@gentoo.org> e16keyedit-0.2.ebuild:
  Added to ~amd64.

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> e16keyedit-0.2.ebuild:
  add sed-4 dep

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> e16keyedit-0.2.ebuild:
  Added iuse, inherit eutils.

  02 Feb 2004; David Holm <dholm@gentoo.org> e16keyedit-0.2.ebuild:
  Added to ~ppc.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*e16keyedit-0.2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.