@@ -1,0 +1,26 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/e16keyedit/e16keyedit-0.7.ebuild,v 1.1 2010/07/31 04:01:50 vapier Exp $
+
+DESCRIPTION="Key binding editor for enlightenment 16"
+HOMEPAGE="http://www.enlightenment.org/"
+SRC_URI="mirror://sourceforge/enlightenment/${P}.tar.gz"
+
+LICENSE="as-is"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+IUSE=""
+
+RDEPEND="=x11-libs/gtk+-2*"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
+
+src_compile() {
+	econf --enable-gtk2 || die
+	emake || die
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die
+	dodoc README ChangeLog AUTHORS
+}
